// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render default spinner 1`] = `
<div
  className="creasy-badge"
>
  <span
    className="creasy-badge__label"
  >
    default
  </span>
</div>
`;

exports[`Badge should render with colours 1`] = `
<div
  className="creasy-badge creasy-badge--color-primary"
>
  <span
    className="creasy-badge__label"
  >
    default
  </span>
</div>
`;

exports[`Badge should render with left and right element 1`] = `
<div
  className="creasy-badge"
>
  left
  <span
    className="creasy-badge__label"
  >
    default
  </span>
  right
</div>
`;
